--- a/image_style_experiments/wikipaintings results.ipynb
+++ b/image_style_experiments/wikipaintings results.ipynb
@@ -36,7 +36,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -55,7 +55,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[u'system.indexes', u'default', u'behance_dec28', u'behance_illustration_jan15', u'flickr_mar23', u'flickr_on_pinterest_80k_mar23', u'pascal_mar23', u'pascal_mc_mar23', u'pascal_mc_on_flickr_mar23', u'pascal_mc_on_pinterest_80k_mar23', u'pascal_mc_on_wikipaintings_mar23', u'pinterest_80k_mar23', u'pinterest_80k_on_flickr_mar23', u'wikipaintings_mar23']\n"
+        "[u'system.indexes', u'default', u'behance_dec28', u'behance_illustration_jan15', u'flickr_mar23', u'flickr_on_pinterest_80k_mar23', u'pascal_mar23', u'pascal_mc_mar23', u'pascal_mc_on_flickr_mar23', u'pascal_mc_on_pinterest_80k_mar23', u'pascal_mc_on_wikipaintings_mar23', u'pinterest_80k_mar23', u'pinterest_80k_on_flickr_mar23', u'wikipaintings_mar23', u'ava_style_oct22', u'ava_style_jul20']\n"
        ]
       },
       {
@@ -109,12 +109,11 @@
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
-        "<p>2 rows \u00d7 11 columns</p>\n",
         "</div>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 3,
        "text": [
         "                        _id                     data     features  num_test  \\\n",
         "0  532f9ee59f00136077e998d5  wikipaintings_style_ALL      [noise]     16492   \n",
@@ -130,13 +129,11 @@
         "\n",
         "  task  \n",
         "0  clf  \n",
-        "1  clf  \n",
-        "\n",
-        "[2 rows x 11 columns]"
+        "1  clf  "
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -1214,14 +1211,6 @@
       }
      ],
      "prompt_number": 10
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
