cosine distance and a Noir-projected distance

--- a/notebooks/similarity.ipynb
+++ b/notebooks/similarity.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:02160e7d29731f03b0cbd44bf475a248fe9bfa39386ad144d59d7a1807fc22a5"
+  "signature": "sha256:0d2a92dfe087ebc9e7719200c4f1ace6922b24e8d288c72be3eeac55814d72dc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -15,12 +15,15 @@
       "%load_ext autoreload\n",
       "%autoreload 2\n",
       "import vislab.searchable_collection\n",
-      "import vislab.datasets"
+      "import vislab.datasets\n",
+      "import caffe\n",
+      "import os\n",
+      "import numpy as np"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -46,11 +49,117 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Initialized SearchableCollection in 25.334 s\n"
+        "Initialized SearchableCollection in 44.694 s\n"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "dirname = os.path.expanduser('~/work/caffe/examples_mine/flickr-finetuning-elbow/')\n",
+      "net = caffe.Net(dirname + '/flickr_finetune_deploy.prototxt', dirname + '/flickr_finetune_train_iter_3000')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# index 0 are the weights, 1 is the bias\n",
+      "print net.params['fc6'][0].data.shape\n",
+      "print net.params['fc6'][1].data.shape\n",
+      "print net.params['fc7'][0].data.shape\n",
+      "print net.params['fc7'][1].data.shape\n",
+      "print net.params['fc8_flickr'][0].data.shape\n",
+      "print net.params['fc8_flickr'][1].data.shape\n",
+      "\n",
+      "fc7_weights = net.params['fc8_flickr'][0].data.squeeze()\n",
+      "print fc7_weights.shape\n",
+      "fc6_weights = np.dot(fc7_weights, net.params['fc7'][0].data.squeeze())\n",
+      "print fc6_weights.shape\n",
+      "\n",
+      "import cPickle\n",
+      "with open('../data/shared/flickr_finetune_weights.pickle', 'wb') as f:\n",
+      "    cPickle.dump({'caffe fc6': fc6_weights, 'caffe fc7': fc7_weights}, f)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "(1, 1, 4096, 9216)\n",
+        "(1, 1, 1, 4096)\n",
+        "(1, 1, 4096, 4096)\n",
+        "(1, 1, 1, 4096)\n",
+        "(1, 1, 20, 4096)\n",
+        "(1, 1, 1, 20)\n",
+        "(20, 4096)\n",
+        "(20, 4096)\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "M = np.linalg.inv(np.diag(fc7_weights[0]))\n",
+      "M"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 42,
+       "text": [
+        "array([[ -83.15381622,   -0.        ,   -0.        , ...,   -0.        ,\n",
+        "          -0.        ,   -0.        ],\n",
+        "       [   0.        ,   38.60193253,    0.        , ...,    0.        ,\n",
+        "           0.        ,    0.        ],\n",
+        "       [  -0.        ,   -0.        ,  -56.49224854, ...,   -0.        ,\n",
+        "          -0.        ,   -0.        ],\n",
+        "       ..., \n",
+        "       [   0.        ,    0.        ,    0.        , ...,   26.90113258,\n",
+        "           0.        ,    0.        ],\n",
+        "       [  -0.        ,   -0.        ,   -0.        , ...,   -0.        ,\n",
+        "        -187.26078796,   -0.        ],\n",
+        "       [   0.        ,    0.        ,    0.        , ...,    0.        ,\n",
+        "           0.        ,  161.74790955]], dtype=float32)"
+       ]
+      }
+     ],
+     "prompt_number": 42
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import time\n",
+      "import scipy.spatial.distance\n",
+      "X = sc.features['caffe fc7'][:10]\n",
+      "\n",
+      "t = time.time()\n",
+      "Y = scipy.spatial.distance.pdist(X, 'euclidean')\n",
+      "print time.time() - t\n",
+      "\n",
+      "t = time.time()\n",
+      "Y = scipy.spatial.distance.pdist(X, 'mahalanobis', M)\n",
+      "print time.time() - t\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
