another similarity method

--- a/notebooks/similarity.ipynb
+++ b/notebooks/similarity.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4ea28426220b0d91e9be1c25885b76665ed8fba5d503e16145e5f89d01c0ac9e"
+  "signature": "sha256:1b54ae7b0648f54ad706e44a4d91392c32bad80207113f8232e6fc7056855dac"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -26,17 +26,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "The autoreload extension is already loaded. To reload it, use:\n",
-        "  %reload_ext autoreload\n"
-       ]
-      }
-     ],
-     "prompt_number": 52
+     "outputs": [],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -47,7 +38,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 53
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -61,18 +52,81 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 124
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "S = np.linalg.inv(np.cov(weights.T))"
+      "S = np.cov(weights.T)\n",
+      "Si = np.linalg.inv(S)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 120
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "W = weights.T\n",
+      "W -= W.mean(1)[:, None]\n",
+      "cov = np.dot(W, W.T)\n",
+      "cov2 = np.cov(W)\n",
+      "import matplotlib.pyplot as plt\n",
+      "%matplotlib inline\n",
+      "plt.matshow(cov[:10, :10])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 20,
+       "text": [
+        "<matplotlib.image.AxesImage at 0x125eb2250>"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "png": "iVBORw0KGgoAAAANSUhEUgAAAPYAAAD7CAYAAABZjGkWAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEqxJREFUeJzt3X2MHdV9xvHv2mvH67ddQ+zdAnaOBWloRZuGBGK1pnZT\nSAGhlDZIASUpaUUrUSC4rWJI+0c2UtqoEYREOKEKJBFRSRyVoJCkdVMiggOqzEsDBGNTXsqpsalf\nwPb6Jbbshe0fM7Ne27v3zNx7XuYOz0eyzNk7nPlh9vg3z94zc0FERERERERERERERERESrgYeA54\nAbgpcS1lLAZ+CjwLbAQ+mbac0qYDTwI/TF1ISQPAvcBmYBOwLG05pXya7PviGeDbwNvSlpPOdOBF\nwAAzgKeAX0tZUAlDwG/l/zwX+G/qXzPAXwP3AD9IXUhJdwN/lv9zL9CfsJYyDPA/HFvM3wWuTlbN\nFKZFOs/5ZAvbAkeBtcAfRjp3u7aT/QUEcICso5yWrpxSzgAuBe4CehLXUkY/cAHwjXw8CoykK6eU\nfWTfw7PJ/iKaDWxLWtEkYi3s04FXJoy35l/rFgZ4D/Bo4jpcbgM+BbyZupCSlgK7gG8CPwfuJFso\ndbYbuBXYArwK7AV+krSiScRa2GORzhPCXLIMeCNZ566ry4CdZPm6G7o1ZB3vXOCr+e8HgZuTVuR2\nJrCK7C/708i+Pz6asqDJxFrY28h+GFVYTNa1624G8D3gn4HvJ67F5beBDwEvA98BPgB8K2lFblvz\nX4/n43vJFnidvQ/4T+B1suhwH9mf/VtSL/AS2d9yM+mOH571kC2M21IX0oYVdM9PxX8G/Gr+z8PA\nP6YrpZR3k71L0kf2PXI3cF3SihK7hOwnyy+SvV1Qd8vJsupTZJe3T5K9ZdcNVtA9PxV/N1nHfpqs\n+9X9p+IAqzn2dtfdZFd2IiIiIiIiIiIiIiKSRMc7lJZPY+yRbtnAKNI0p62AV9eftI59bD0cOzin\n/MF/fwT+bqb7uDkHN7RfkcvN7y9/7MPDcMFwuWO/1E4xJZ1V4dgdwzA4XOrQFc/8ezvVlLL+1gpv\n+/94GP5guNyxZ7RTTTnnfORx90HAjuGvMTj8F6Xn3XjDee2W1NqaHphkHcfaUjpuZH437D84pr9n\nb+oSKuuf04U1v9ldNc/Zeyh1CS1FX9giEl70hX3Zwbrfbnu8kcWXpy6hshG6sOZ3dlnNly9PXUFL\n0Rf2706PfcYOvWNl6gqqm7sydQXVnbUydQWVzF353tQltFRmYXt9VtmWxabTKaIy02zqEiozC23q\nEiozozZ1CZUstK+nLqEl18KeDqwhW9y/DlxF/W+3FHnLcy1s788qW/KK7eRfj86+aVKXUJndZVKX\nUJntNalLqGSXOTV1CS25Fna3P6tM5C3JtbC9P6tMGTs8Zezw6p6xex2vl3pW2epZ/fTvy97GetfQ\nIOfP6Ru/5C4WcjHeuWjouPGJr48v/Oey34zJ/gCtPdXfeJodv8QuFu5U46Ge7TBt6tdPGi/Jx1s8\nj8nH+aItLrcnGw/1b2/5+sTxgN0HwF4zP8i4WLDFpfZU40Kp4w+CnZOPD+avexoXC7a41J5qXKh6\nvJmRn++oaWs8uH0th7duYOSNAVpxbSntJXuc0e+TPWr1MbIfoG2ecEylLaVl1WZLaRV12VJaQW22\nlFZRgy2lVcXeUurq2KPA9cCPyX5C/nWOX9QiUkNl3sdeB7yLrGd8vtMTKmOHp4wdXt0ztvaKizRQ\n9IWt97HD0/vY4XX7+9gi0oWiL2xl7PCUscNTxhaR6JSxHZSx41DG9svLM8/A/2aSsUuXeZ+zcMO/\nhvnctzVfWR1kXiDcpozPBZoXuPbxLwaZ946ePwoyLwDLlwaZ9uqH7wgy7909fwl1eOZZscWzW8yw\nb6QuoTKz36YuobIZdjR1CZWYBTZ1CS0pY4s0UPSFXdyM0S2Omm57lhPYeSZ1CZUdNa7dzfVi95jU\nJbSkji3SQMrYDsrYcShj+6WOLdJAytgOythxKGP7pY4t0kDK2A7K2HEoY/ulji3SQMrYDsrYcShj\n+6WOLdJAytgOythxKGP7pY4t0kDK2A7K2HEoY/ulji3SQMrYDsrYcShj+6WOLdJAytgOythxKGP7\npY4t0kDK2A7K2HEoY/ulji3SQH4eP3zzmIdpjnf957/gfc7C7S/cFGTevkXhrkYOf/+UIPN+8Or7\ng8wL8B89gX6ecvHyMPMC3BJo3ocCzXv95J+PrY4t0kDxM3aXfRaW3WFSl1CZOWRTl1CZMXtSl1CJ\n2WlTl9CSOrZIA8V/H7vLPgvLDNrUJVRm+0zqEiqzdkHqEiqxi0zqElpSxxZpIGVsB2XsOJSx/Sqz\nsBcDPwWeBTYCnwxakYh0rMwG3aPAXwFPAXOB/wIeADa3c0Jl7PCUscNrQsbeTraoAQ6QLejTglUk\nIh2rmrEN8B7g0XZPqIwdnjJ2eHXP2FXulZsL3AvcSNa5x/U/soqRsQEABs3Z9L1j2fgld7GQi/FQ\nz3aYxpSvn7jwi5switsnfYztDjN+iV0s3KnG2/cMtXz9xPGSV7YCsGXxGV7Hz5NtKS0WbXG5Pdl4\n6Mj2lq9PHM+3+wHYZ+YFGRcLtrjUnmpcKHX8fIvdl//3zM//e3yN8wVbXGpPNR6vt+Txlnx8JB/P\nbG88uGkth1/cwMj0AVopu1d8BvAjYB3wpRNe017xnPaKH097xSd4KNC8HewV7wG+Dmzi5EUtIjVU\nZmH/DvAx4PeAJ/NfF7d7QmXs8JSxw2tCxn4E7VAT6SraK+6g97Hj0PvYfqkTizSQ9oo7KGPHoYzt\nlzq2SAMpYzsoY8ehjO2XOrZIA/l5Sums8jvPzBKL3WLcB4baAQTM+tju0scueWXr+PZOl0MPhvuU\nk54HK/wZz7DYo6bUsctvf6DNitweWXpR6WPNkMVuN+UO/lF79ZRyRbnDzCKL3WnKz3thW9W4rdFT\nSkXeMuJn7DLdukbKdus6Kdut66R0t66JSt06AXVskQaK/z72Ehv7lB0pbpvsJmaGTV1CZWbIpi6h\nErPIpi6hJXVskQZSxnZQxo5DGdsvdWyRBlLGdlDGjkMZ2y91bJEGUsZ2UMaOQxnbL3VskQZSxnZQ\nxo5DGdsvdWyRBlLGdlDGjkMZ2y91bJEGUsZ2UMaOQxnbL3VskQZSxnZQxo5DGdsvdWyRBlLGdlDG\njkMZ2y91bJEGUsZ2UMaOQxnbrzKftul2lpdZjhdwPYX6EPmeJ8o/IriqsdU+nhR9sp6rwtXMJwLN\nezjQvMAlm+8LMu+6+/84yLysmfzL8TP2Qhv7lB3pxs/Bsv9nUpdQmcGmLqGSefZA6hJaUsYWaaD4\nGXuXiX3KjnTj52CZX7GpS6jMYlKXUMl+Mzd1CS2pY4s0kDK2gzJ2HMrYfqljizRQ2YU9HXgS+GGn\nJ1TGDk8ZO7ymZOwbgU1AwDc9RcSXMgv7DOBS4C48fJ62MnZ4ytjhNSFj3wZ8CngzcC0i4olrS+ll\nwE6yfL1yqoP6D6xi5OAAAIOnn03fgmXjWbro0BOztVlop3x9fJxnLrM/H8/zOD50LDsXHXmqcfG1\nsscXd1YV+7V9jQtFNy5y9FTjsseb2fnXf2nCjPNOPP7/08f4NbBvz8ev5a97GheduMjQvsaFTr9/\nBx9by+HNGxiZOUArrkvrfwA+DowCs4D5wPeAP5lwzBjnBIjen/M/5bi9geZ9ItC8BNwrvjrgj03O\nDjTvZYHmBS55b5ftFb+8ByZZx65L8b8FFgNLgSuBBzl+UVemjB2eMnZ4TcjYE+mn4iJdoMptm+vz\nXx3R+9jh6X3s8JryPraIdBHtFXdQxo5DGdsvdWyRBtL92A7K2HEoY/ulji3SQMrYDsrYcShj++Vj\nO9PYirF1pQ8esPvYa+Y7j1t/3sWd1NTSBx+/v/Sx8+1+9pl5pY79JbPbLcnpkasuKn2smW3Ht3S6\nfGZtmB1tAJ/lM6WPNQasLXv0uW1UU9bRUkcZcwBrK1yOr/lwm/U4XN/ezjPvyizqOim7qOuk7KKu\nk/KLuh4qLeoElLFFGij6wh6w+2KfsiPz7f7UJVRW3GHVTYxJXUE1xtQ7Y6tjizSQMraDMnYcyth+\nqWOLNJAytoMydhzK2H6pY4s0kDK2gzJ2HMrYfqljizSQMraDMnYcyth+qWOLNJAytoMydhzK2H6p\nY4s0kDK2gzJ2HMrYfqljizSQMraDMnYcyth+qWOLNJAytoMydhzK2H6pY4s0kDK2gzJ2HMrYfnl5\nSim3+P8Qzmv/5ove5yzc0XN+mInN8jDzAnwi0LzDw4EmhrHVnw0yb8+RgB/6ujHMtOc/0PHnWU7q\nsZ6VUIenlJpRG/uUHTFmT+oSKuu2Z3QD2GkmdQmVmH6buoSWlLFFGij+Z3f1mtin7Ii1C1KXUFm3\nfQ4WgHnTpi6hEjtiUpfQkjq2SAMpYzsoY8ehjO2XOrZIA5VZ2APAvcBmYBOwrJMTKmOHp4wdXt0z\ndm+JY74M/BtwRX78nKAViUjHXB27H7gA+EY+HgVGOjmhMnZ4ytjhdXvGXgrsAr4J/By4EwJ+CLSI\neOFa2L1knzL+1fz3g8DNnZxQGTs8Zezwuj1jb81/PZ6P72WShd2/bhUj0wYAGDRn03fmsvEFXFx6\nVx0XZthRAI6aXm9jY/aML9jiUtvbeCj/79lu/I7zxVpcZnsbZ7+N34The1xcYhcL18fY9FrsaP71\n3vzrvsb5JXaxcH2NC6fY7Ptlt1nQ1nhs7cPs3rCRQwOzaKXMTSA/A64BngeGgT7gpgmvV7oJxIza\nUl27LjeBTPxLwH1wPW4CMdjyXbsmN4HYaaZ0167DTSCm31bq2rFvAinzU/EbgHuAmcBLwJ/6LExE\n/CuzsJ8GzvN1QmXs8JSxw6t7xtbOM5EG0l5xB72PHYfex/ZLHVukgXQ/toMydhzK2H6pY4s0kDK2\ngzJ2HMrYfqljizSQn8cPrw2wE+jKl/3PWbh4aZh5bwkzLQCHA837vh8EmhhY9aEg0x6808e37eTm\nnBdoV9tDj4aZN3s8QvrHD4tIePEz9kEb+5QdMfNt6hIqM6/Z1CVUVtyM0S3MgE1dQkvq2CINFP99\n7Dkm9ik7YveZ1CVUZt9uUpdQWXHbZLewe03qElpSxxZpIGVsB2XsOJSx/VLHFmkgZWwHZew4lLH9\nUscWaSBlbAdl7DiUsf1SxxZpIGVsB2XsOJSx/VLHFmkgZWwHZew4lLH9UscWaSBlbAdl7DiUsf1S\nxxZpIGVsB2XsOJSx/VLHFmkgZWwHZew4lLH9UscWaSAvTyk9Z+yx0gcvtK+zy5zqPG7jBd4+4PNk\n/1T+ULPTYheZcgdf0VY1pVyy+b7Sx86zB9hv5pY6dl1PwM+avvDDpQ+t9HnTo+2VU8b2h8otiW3G\ncLq1pecduivQn/M1PaCnlIq8NURf2GW6dZ2U7tY1UrZb10ndPwvrRFW6dQrq2CINFH1hL7Svxz5l\nR8xOm7qEyubZA6lLqKzun4V1om3GpC6hJXVskQZSxnZQxo5DGduvMgv708CzwDPAt4G3Ba1IRDrm\nWtgG+HPgXOA3gOnAlZ2cUBk7PGXs8OqesXsdr+8DjgKzgTfy37eFLkpEOuPq2LuBW4EtwKvAXuAn\nnZxQGTs8Zezw6p6xXR37TGAV2SX5CPAvwEeBeyYedGDVlzk40AfA6We/kwXLfnN8AReX3lXHBbPA\nAmD3GH/jnccWbHGp7W28KB/v9DsuFJfZxeLtdGxMNrY20Di/xC4WrpfxG8duwihun/Q1Li6xi4Xr\na1wwh/PzzTJtjQd/sZbDL2xgpHeAVlwbYz8CXARck48/DiwDrptwjPaKF7RX/HjaKz6ubnvFnyNb\nyH35v3whsMl3bSLil2thPw18C3gC+EX+ta91ckJl7PCUscPr9owN8IX8l4h0Ce0Vd9D72HHofWy/\ntFdcpIG0V9xBGTsOZWy/1LFFGkgZ20EZOw5lbL/UsUUaSBnbQRk7DmVsv7w8fpjr/W+Xu/r2O7zP\nWbj7K9eGmfi5MNMC2Z6/ELYGmhc4/7r1QeZ9rGdWkHkBuOv9QaY9coWPpXaymdmW8fSPHzYzbOxT\ndsQcsalLqMzst6lLqOwUuyd1CZUUN2fUlTK2SAPF/+yuoyb2KTtiZ5rUJVRm55nUJVS22yxIXUIl\nxW2UdaWOLdJAytgOythxKGP7pY4t0kDK2A7K2HEoY/ulji3SQMrYDsrYcShj+6WOLdJAytgOythx\nKGP7pY4t0kDK2A7K2HEoY/ulji3SQMrYDsrYcShj+6WOLdJAytgOythxKGP7FX1hH3plQ+xTduTQ\ni91VL8Chzd1X8+sbNqYuoZJDz9f7zzj6wt7xvyGfH+Tfjpe7q16AHS91X83bnnsxdQmV1P37Qhlb\npIGiL+z+6Xtjn7Ij/W90V70A/Ue6r+a+vYdTl1BJ/2i9/4x9PDrxIWCFh3lEpLr1wMrURYiIiIiI\niIiIiIiIpPP/1PwhCxMcL8AAAAAASUVORK5CYII=\n",
+       "text": [
+        "<matplotlib.figure.Figure at 0x120789250>"
+       ]
+      }
+     ],
+     "prompt_number": 20
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "plt.matshow(cov2[:10, :10])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 21,
+       "text": [
+        "<matplotlib.image.AxesImage at 0x125fcf650>"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "png": "iVBORw0KGgoAAAANSUhEUgAAAPYAAAD7CAYAAABZjGkWAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEqxJREFUeJzt3X2MHdV9xvHv2mvH67ddQ+zdAnaOBWloRZuGBGK1pnZT\nSAGhlDZIASUpaUUrUSC4rWJI+0c2UtqoEYREOKEKJBFRSRyVoJCkdVMiggOqzEsDBGNTXsqpsalf\nwPb6Jbbshe0fM7Ne27v3zNx7XuYOz0eyzNk7nPlh9vg3z94zc0FERERERERERERERERESrgYeA54\nAbgpcS1lLAZ+CjwLbAQ+mbac0qYDTwI/TF1ISQPAvcBmYBOwLG05pXya7PviGeDbwNvSlpPOdOBF\nwAAzgKeAX0tZUAlDwG/l/zwX+G/qXzPAXwP3AD9IXUhJdwN/lv9zL9CfsJYyDPA/HFvM3wWuTlbN\nFKZFOs/5ZAvbAkeBtcAfRjp3u7aT/QUEcICso5yWrpxSzgAuBe4CehLXUkY/cAHwjXw8CoykK6eU\nfWTfw7PJ/iKaDWxLWtEkYi3s04FXJoy35l/rFgZ4D/Bo4jpcbgM+BbyZupCSlgK7gG8CPwfuJFso\ndbYbuBXYArwK7AV+krSiScRa2GORzhPCXLIMeCNZ566ry4CdZPm6G7o1ZB3vXOCr+e8HgZuTVuR2\nJrCK7C/708i+Pz6asqDJxFrY28h+GFVYTNa1624G8D3gn4HvJ67F5beBDwEvA98BPgB8K2lFblvz\nX4/n43vJFnidvQ/4T+B1suhwH9mf/VtSL/AS2d9yM+mOH571kC2M21IX0oYVdM9PxX8G/Gr+z8PA\nP6YrpZR3k71L0kf2PXI3cF3SihK7hOwnyy+SvV1Qd8vJsupTZJe3T5K9ZdcNVtA9PxV/N1nHfpqs\n+9X9p+IAqzn2dtfdZFd2IiIiIiIiIiIiIiKSRMc7lJZPY+yRbtnAKNI0p62AV9eftI59bD0cOzin\n/MF/fwT+bqb7uDkHN7RfkcvN7y9/7MPDcMFwuWO/1E4xJZ1V4dgdwzA4XOrQFc/8ezvVlLL+1gpv\n+/94GP5guNyxZ7RTTTnnfORx90HAjuGvMTj8F6Xn3XjDee2W1NqaHphkHcfaUjpuZH437D84pr9n\nb+oSKuuf04U1v9ldNc/Zeyh1CS1FX9giEl70hX3Zwbrfbnu8kcWXpy6hshG6sOZ3dlnNly9PXUFL\n0Rf2706PfcYOvWNl6gqqm7sydQXVnbUydQWVzF353tQltFRmYXt9VtmWxabTKaIy02zqEiozC23q\nEiozozZ1CZUstK+nLqEl18KeDqwhW9y/DlxF/W+3FHnLcy1s788qW/KK7eRfj86+aVKXUJndZVKX\nUJntNalLqGSXOTV1CS25Fna3P6tM5C3JtbC9P6tMGTs8Zezw6p6xex2vl3pW2epZ/fTvy97GetfQ\nIOfP6Ru/5C4WcjHeuWjouPGJr48v/Oey34zJ/gCtPdXfeJodv8QuFu5U46Ge7TBt6tdPGi/Jx1s8\nj8nH+aItLrcnGw/1b2/5+sTxgN0HwF4zP8i4WLDFpfZU40Kp4w+CnZOPD+avexoXC7a41J5qXKh6\nvJmRn++oaWs8uH0th7duYOSNAVpxbSntJXuc0e+TPWr1MbIfoG2ecEylLaVl1WZLaRV12VJaQW22\nlFZRgy2lVcXeUurq2KPA9cCPyX5C/nWOX9QiUkNl3sdeB7yLrGd8vtMTKmOHp4wdXt0ztvaKizRQ\n9IWt97HD0/vY4XX7+9gi0oWiL2xl7PCUscNTxhaR6JSxHZSx41DG9svLM8/A/2aSsUuXeZ+zcMO/\nhvnctzVfWR1kXiDcpozPBZoXuPbxLwaZ946ePwoyLwDLlwaZ9uqH7wgy7909fwl1eOZZscWzW8yw\nb6QuoTKz36YuobIZdjR1CZWYBTZ1CS0pY4s0UPSFXdyM0S2Omm57lhPYeSZ1CZUdNa7dzfVi95jU\nJbSkji3SQMrYDsrYcShj+6WOLdJAytgOythxKGP7pY4t0kDK2A7K2HEoY/ulji3SQMrYDsrYcShj\n+6WOLdJAytgOythxKGP7pY4t0kDK2A7K2HEoY/ulji3SQMrYDsrYcShj+6WOLdJAytgOythxKGP7\npY4t0kDK2A7K2HEoY/ulji3SQH4eP3zzmIdpjnf957/gfc7C7S/cFGTevkXhrkYOf/+UIPN+8Or7\ng8wL8B89gX6ecvHyMPMC3BJo3ocCzXv95J+PrY4t0kDxM3aXfRaW3WFSl1CZOWRTl1CZMXtSl1CJ\n2WlTl9CSOrZIA8V/H7vLPgvLDNrUJVRm+0zqEiqzdkHqEiqxi0zqElpSxxZpIGVsB2XsOJSx/Sqz\nsBcDPwWeBTYCnwxakYh0rMwG3aPAXwFPAXOB/wIeADa3c0Jl7PCUscNrQsbeTraoAQ6QLejTglUk\nIh2rmrEN8B7g0XZPqIwdnjJ2eHXP2FXulZsL3AvcSNa5x/U/soqRsQEABs3Z9L1j2fgld7GQi/FQ\nz3aYxpSvn7jwi5switsnfYztDjN+iV0s3KnG2/cMtXz9xPGSV7YCsGXxGV7Hz5NtKS0WbXG5Pdl4\n6Mj2lq9PHM+3+wHYZ+YFGRcLtrjUnmpcKHX8fIvdl//3zM//e3yN8wVbXGpPNR6vt+Txlnx8JB/P\nbG88uGkth1/cwMj0AVopu1d8BvAjYB3wpRNe017xnPaKH097xSd4KNC8HewV7wG+Dmzi5EUtIjVU\nZmH/DvAx4PeAJ/NfF7d7QmXs8JSxw2tCxn4E7VAT6SraK+6g97Hj0PvYfqkTizSQ9oo7KGPHoYzt\nlzq2SAMpYzsoY8ehjO2XOrZIA/l5Sums8jvPzBKL3WLcB4baAQTM+tju0scueWXr+PZOl0MPhvuU\nk54HK/wZz7DYo6bUsctvf6DNitweWXpR6WPNkMVuN+UO/lF79ZRyRbnDzCKL3WnKz3thW9W4rdFT\nSkXeMuJn7DLdukbKdus6Kdut66R0t66JSt06AXVskQaK/z72Ehv7lB0pbpvsJmaGTV1CZWbIpi6h\nErPIpi6hJXVskQZSxnZQxo5DGdsvdWyRBlLGdlDGjkMZ2y91bJEGUsZ2UMaOQxnbL3VskQZSxnZQ\nxo5DGdsvdWyRBlLGdlDGjkMZ2y91bJEGUsZ2UMaOQxnbL3VskQZSxnZQxo5DGdsvdWyRBlLGdlDG\njkMZ2y91bJEGUsZ2UMaOQxnbrzKftul2lpdZjhdwPYX6EPmeJ8o/IriqsdU+nhR9sp6rwtXMJwLN\nezjQvMAlm+8LMu+6+/84yLysmfzL8TP2Qhv7lB3pxs/Bsv9nUpdQmcGmLqGSefZA6hJaUsYWaaD4\nGXuXiX3KjnTj52CZX7GpS6jMYlKXUMl+Mzd1CS2pY4s0kDK2gzJ2HMrYfqljizRQ2YU9HXgS+GGn\nJ1TGDk8ZO7ymZOwbgU1AwDc9RcSXMgv7DOBS4C48fJ62MnZ4ytjhNSFj3wZ8CngzcC0i4olrS+ll\nwE6yfL1yqoP6D6xi5OAAAIOnn03fgmXjWbro0BOztVlop3x9fJxnLrM/H8/zOD50LDsXHXmqcfG1\nsscXd1YV+7V9jQtFNy5y9FTjsseb2fnXf2nCjPNOPP7/08f4NbBvz8ev5a97GheduMjQvsaFTr9/\nBx9by+HNGxiZOUArrkvrfwA+DowCs4D5wPeAP5lwzBjnBIjen/M/5bi9geZ9ItC8BNwrvjrgj03O\nDjTvZYHmBS55b5ftFb+8ByZZx65L8b8FFgNLgSuBBzl+UVemjB2eMnZ4TcjYE+mn4iJdoMptm+vz\nXx3R+9jh6X3s8JryPraIdBHtFXdQxo5DGdsvdWyRBtL92A7K2HEoY/ulji3SQMrYDsrYcShj++Vj\nO9PYirF1pQ8esPvYa+Y7j1t/3sWd1NTSBx+/v/Sx8+1+9pl5pY79JbPbLcnpkasuKn2smW3Ht3S6\nfGZtmB1tAJ/lM6WPNQasLXv0uW1UU9bRUkcZcwBrK1yOr/lwm/U4XN/ezjPvyizqOim7qOuk7KKu\nk/KLuh4qLeoElLFFGij6wh6w+2KfsiPz7f7UJVRW3GHVTYxJXUE1xtQ7Y6tjizSQMraDMnYcyth+\nqWOLNJAytoMydhzK2H6pY4s0kDK2gzJ2HMrYfqljizSQMraDMnYcyth+qWOLNJAytoMydhzK2H6p\nY4s0kDK2gzJ2HMrYfqljizSQMraDMnYcyth+qWOLNJAytoMydhzK2H6pY4s0kDK2gzJ2HMrYfnl5\nSim3+P8Qzmv/5ove5yzc0XN+mInN8jDzAnwi0LzDw4EmhrHVnw0yb8+RgB/6ujHMtOc/0PHnWU7q\nsZ6VUIenlJpRG/uUHTFmT+oSKuu2Z3QD2GkmdQmVmH6buoSWlLFFGij+Z3f1mtin7Ii1C1KXUFm3\nfQ4WgHnTpi6hEjtiUpfQkjq2SAMpYzsoY8ehjO2XOrZIA5VZ2APAvcBmYBOwrJMTKmOHp4wdXt0z\ndm+JY74M/BtwRX78nKAViUjHXB27H7gA+EY+HgVGOjmhMnZ4ytjhdXvGXgrsAr4J/By4EwJ+CLSI\neOFa2L1knzL+1fz3g8DNnZxQGTs8Zezwuj1jb81/PZ6P72WShd2/bhUj0wYAGDRn03fmsvEFXFx6\nVx0XZthRAI6aXm9jY/aML9jiUtvbeCj/79lu/I7zxVpcZnsbZ7+N34The1xcYhcL18fY9FrsaP71\n3vzrvsb5JXaxcH2NC6fY7Ptlt1nQ1nhs7cPs3rCRQwOzaKXMTSA/A64BngeGgT7gpgmvV7oJxIza\nUl27LjeBTPxLwH1wPW4CMdjyXbsmN4HYaaZ0167DTSCm31bq2rFvAinzU/EbgHuAmcBLwJ/6LExE\n/CuzsJ8GzvN1QmXs8JSxw6t7xtbOM5EG0l5xB72PHYfex/ZLHVukgXQ/toMydhzK2H6pY4s0kDK2\ngzJ2HMrYfqljizSQn8cPrw2wE+jKl/3PWbh4aZh5bwkzLQCHA837vh8EmhhY9aEg0x6808e37eTm\nnBdoV9tDj4aZN3s8QvrHD4tIePEz9kEb+5QdMfNt6hIqM6/Z1CVUVtyM0S3MgE1dQkvq2CINFP99\n7Dkm9ik7YveZ1CVUZt9uUpdQWXHbZLewe03qElpSxxZpIGVsB2XsOJSx/VLHFmkgZWwHZew4lLH9\nUscWaSBlbAdl7DiUsf1SxxZpIGVsB2XsOJSx/VLHFmkgZWwHZew4lLH9UscWaSBlbAdl7DiUsf1S\nxxZpIGVsB2XsOJSx/VLHFmkgZWwHZew4lLH9UscWaSAvTyk9Z+yx0gcvtK+zy5zqPG7jBd4+4PNk\n/1T+ULPTYheZcgdf0VY1pVyy+b7Sx86zB9hv5pY6dl1PwM+avvDDpQ+t9HnTo+2VU8b2h8otiW3G\ncLq1pecduivQn/M1PaCnlIq8NURf2GW6dZ2U7tY1UrZb10ndPwvrRFW6dQrq2CINFH1hL7Svxz5l\nR8xOm7qEyubZA6lLqKzun4V1om3GpC6hJXVskQZSxnZQxo5DGduvMgv708CzwDPAt4G3Ba1IRDrm\nWtgG+HPgXOA3gOnAlZ2cUBk7PGXs8OqesXsdr+8DjgKzgTfy37eFLkpEOuPq2LuBW4EtwKvAXuAn\nnZxQGTs8Zezw6p6xXR37TGAV2SX5CPAvwEeBeyYedGDVlzk40AfA6We/kwXLfnN8AReX3lXHBbPA\nAmD3GH/jnccWbHGp7W28KB/v9DsuFJfZxeLtdGxMNrY20Di/xC4WrpfxG8duwihun/Q1Li6xi4Xr\na1wwh/PzzTJtjQd/sZbDL2xgpHeAVlwbYz8CXARck48/DiwDrptwjPaKF7RX/HjaKz6ubnvFnyNb\nyH35v3whsMl3bSLil2thPw18C3gC+EX+ta91ckJl7PCUscPr9owN8IX8l4h0Ce0Vd9D72HHofWy/\ntFdcpIG0V9xBGTsOZWy/1LFFGkgZ20EZOw5lbL/UsUUaSBnbQRk7DmVsv7w8fpjr/W+Xu/r2O7zP\nWbj7K9eGmfi5MNMC2Z6/ELYGmhc4/7r1QeZ9rGdWkHkBuOv9QaY9coWPpXaymdmW8fSPHzYzbOxT\ndsQcsalLqMzst6lLqOwUuyd1CZUUN2fUlTK2SAPF/+yuoyb2KTtiZ5rUJVRm55nUJVS22yxIXUIl\nxW2UdaWOLdJAytgOythxKGP7pY4t0kDK2A7K2HEoY/ulji3SQMrYDsrYcShj+6WOLdJAytgOythx\nKGP7pY4t0kDK2A7K2HEoY/ulji3SQMrYDsrYcShj+6WOLdJAytgOythxKGP7FX1hH3plQ+xTduTQ\ni91VL8Chzd1X8+sbNqYuoZJDz9f7zzj6wt7xvyGfH+Tfjpe7q16AHS91X83bnnsxdQmV1P37Qhlb\npIGiL+z+6Xtjn7Ij/W90V70A/Ue6r+a+vYdTl1BJ/2i9/4x9PDrxIWCFh3lEpLr1wMrURYiIiIiI\niIiIiIiIpPP/1PwhCxMcL8AAAAAASUVORK5CYII=\n",
+       "text": [
+        "<matplotlib.figure.Figure at 0x123e4dbd0>"
+       ]
+      }
+     ],
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -83,14 +137,15 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 126
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "feats2 = feats[:1000]\n",
-      "sklearn.metrics.pairwise.pairwise_distances(feats2, metric='mahalanobis', n_jobs=-2)"
+      "# TOO SLOW!\n",
+      "#sklearn.metrics.pairwise.pairwise_distances(feats2, metric='mahalanobis', n_jobs=-2)"
      ],
      "language": "python",
      "metadata": {},
@@ -101,6 +156,7 @@
      "collapsed": false,
      "input": [
       "print weights.shape\n",
+      "print W.shape\n",
       "print feats.shape"
      ],
      "language": "python",
@@ -111,11 +167,12 @@
        "stream": "stdout",
        "text": [
         "(20, 4096)\n",
-        "(80000, 4096)\n"
+        "(4096, 20)\n",
+        "(10000, 4096)\n"
        ]
       }
      ],
-     "prompt_number": 125
+     "prompt_number": 24
     },
     {
      "cell_type": "code",
